--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 
 .header {
     width: 100%;
-    background-image: url('insight-logo.png'); 
+    background-image: url('/Images/insight-logo.png'); 
     background-position: center top;
     background-repeat: no-repeat;
     background-size: contain; 
